:lipstick: Fix formio-dialog z-index too low

--- a/src/openforms/forms/static/forms/scss/components/builder/_builder.scss
+++ b/src/openforms/forms/static/forms/scss/components/builder/_builder.scss
@@ -30,3 +30,7 @@ li.nav-item {
     }
   }
 }
+
+.formio-dialog {
+  z-index: 10000000;
+}
